# speed_sim

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  cli.cpp  cli.hpp  csv.cpp  main.cpp  parser.cpp  parser.hpp  report.docx  sim.cpp  sim.hpp  simulation.cpp  simulation.hpp
shared/: common.hpp  csv.cpp  csv.hpp  parser.cpp  parser.hpp
src/: csv.hpp
task_1/: CMakeLists.txt  main.cpp  simulation.cpp  simulation.hpp
task_2/: CMakeLists.txt  main.cpp  process.cpp  process.hpp  simulation.cpp
task_3/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.csv  test_csv.cpp  test_parser.cpp
